--- a/Process.ipynb
+++ b/Process.ipynb
@@ -451,7 +451,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('output.csv')\n",
     "df_us = df[df['Country'] == 'United States']\n",
@@ -487,7 +486,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "\n",
     "df_iata = pd.read_csv('flights_sample_3m.csv')\n",
     "df_longitude_latitude = pd.read_csv('Us_Airports.csv')\n",
@@ -499,8 +497,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "276a1b06-9185-4ead-b01e-aad738ebd418",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        ORIGIN  o_latitude  o_longitude DEST  d_latitude  d_longitude\n",
+      "0          FLL   26.072599   -80.152702  EWR   40.692501   -74.168701\n",
+      "1          MSP   44.882000   -93.221802  SEA   47.449001  -122.308998\n",
+      "2          DEN   39.861698  -104.672997  MSP   44.882000   -93.221802\n",
+      "3          MSP   44.882000   -93.221802  SFO   37.618999  -122.375000\n",
+      "4          MCO   28.429399   -81.308998  DFW   32.896801   -97.038002\n",
+      "...        ...         ...          ...  ...         ...          ...\n",
+      "2999995    JAX   30.494101   -81.687897  CLT   35.214001   -80.943100\n",
+      "2999996    ORD   41.978600   -87.904800  AUS   30.194500   -97.669899\n",
+      "2999997    HSV   34.637199   -86.775101  ATL   33.636700   -84.428101\n",
+      "2999998    BOS   42.364300   -71.005203  LGA   40.777199   -73.872597\n",
+      "2999999    LGB   33.817699  -118.152000  SJC   37.362598  -121.929001\n",
+      "\n",
+      "[3000000 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_iata = pd.read_csv('flights_sample_3m.csv')\n",
+    "df_longitude_latitude = pd.read_csv('Us_Airports.csv')\n",
+    "\n",
+    "df_merged_origin = pd.merge(df_iata, df_longitude_latitude[['IATA', 'Latitude', 'Longitude']], left_on='ORIGIN', right_on='IATA', how='left')\n",
+    "df_merged_origin.rename(columns={'Latitude': 'o_latitude', 'Longitude': 'o_longitude'}, inplace=True)\n",
+    "\n",
+    "df_merged_dest = pd.merge(df_merged_origin, df_longitude_latitude[['IATA', 'Latitude', 'Longitude']], left_on='DEST', right_on='IATA', how='left')\n",
+    "df_merged_dest.rename(columns={'Latitude': 'd_latitude', 'Longitude': 'd_longitude'}, inplace=True)\n",
+    "\n",
+    "df_merged_dest.drop(columns=['IATA_x', 'IATA_y'], inplace=True)\n",
+    "\n",
+    "\n",
+    "print(df_merged_dest[['ORIGIN', 'o_latitude', 'o_longitude', 'DEST', 'd_latitude', 'd_longitude']])\n",
+    "\n",
+    "\n",
+    "df_merged_dest.to_csv('Longitues_flights_merged.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c90a3fcb-dd04-41c0-9293-0401139f9924",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        ORIGIN  o_latitude  o_longitude\n",
+      "16         STT         NaN          NaN\n",
+      "63         SJU         NaN          NaN\n",
+      "417        SJU         NaN          NaN\n",
+      "437        SJU         NaN          NaN\n",
+      "624        SJU         NaN          NaN\n",
+      "...        ...         ...          ...\n",
+      "2999127    STT         NaN          NaN\n",
+      "2999274    SJU         NaN          NaN\n",
+      "2999673    STT         NaN          NaN\n",
+      "2999861    STT         NaN          NaN\n",
+      "2999882    SJU         NaN          NaN\n",
+      "\n",
+      "[18257 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_merged_dest = pd.read_csv('Longitues_flights_merged.csv')\n",
+    "\n",
+    "origin_nulls = df_merged_dest[df_merged_dest['o_latitude'].isnull() | df_merged_dest['o_longitude'].isnull()]\n",
+    "\n",
+    "print(origin_nulls[['ORIGIN', 'o_latitude', 'o_longitude']])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "50cbcb37-73d2-4ef6-a574-417cff3cd80a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        DEST  d_latitude  d_longitude\n",
+      "180      BQN         NaN          NaN\n",
+      "214      SJU         NaN          NaN\n",
+      "287      SJU         NaN          NaN\n",
+      "417      STT         NaN          NaN\n",
+      "1284     SJU         NaN          NaN\n",
+      "...      ...         ...          ...\n",
+      "2999759  STX         NaN          NaN\n",
+      "2999760  SJU         NaN          NaN\n",
+      "2999769  SJU         NaN          NaN\n",
+      "2999838  SJU         NaN          NaN\n",
+      "2999874  SJU         NaN          NaN\n",
+      "\n",
+      "[18373 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "df_merged_dest = pd.read_csv('Longitues_flights_merged.csv')\n",
+    "dest_nulls = df_merged_dest[df_merged_dest['d_latitude'].isnull() | df_merged_dest['d_longitude'].isnull()]\n",
+    "print(dest_nulls[['DEST', 'd_latitude', 'd_longitude']])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "162ac9c6-3c7a-459a-b0aa-5241be159713",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        ORIGIN  o_latitude  o_longitude DEST  d_latitude  d_longitude\n",
+      "0          FLL   26.072599   -80.152702  EWR   40.692501   -74.168701\n",
+      "1          MSP   44.882000   -93.221802  SEA   47.449001  -122.308998\n",
+      "2          DEN   39.861698  -104.672997  MSP   44.882000   -93.221802\n",
+      "3          MSP   44.882000   -93.221802  SFO   37.618999  -122.375000\n",
+      "4          MCO   28.429399   -81.308998  DFW   32.896801   -97.038002\n",
+      "...        ...         ...          ...  ...         ...          ...\n",
+      "2999995    JAX   30.494101   -81.687897  CLT   35.214001   -80.943100\n",
+      "2999996    ORD   41.978600   -87.904800  AUS   30.194500   -97.669899\n",
+      "2999997    HSV   34.637199   -86.775101  ATL   33.636700   -84.428101\n",
+      "2999998    BOS   42.364300   -71.005203  LGA   40.777199   -73.872597\n",
+      "2999999    LGB   33.817699  -118.152000  SJC   37.362598  -121.929001\n",
+      "\n",
+      "[3000000 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('Longitues_flights_merged.csv')\n",
+    "iata_coords = {\n",
+    "    'STX': (17.698420, -64.798600),\n",
+    "    'STT': (18.334470, -64.971260),\n",
+    "    'BQN': (18.488775, -67.130653),\n",
+    "    'SJU': (18.425578, -66.104856),\n",
+    "    'PSE': (18.014440, -66.564020),\n",
+    "    'SPN': (15.120491, 145.729625),\n",
+    "    'GUM': (13.385870, 144.670430),\n",
+    "    'EAR': (40.725630, -99.013060),\n",
+    "    'PPG': (-14.215810, -169.425560),\n",
+    "    'XWA': (48.259722222, -103.7505555556)\n",
+    "}\n",
+    "\n",
+    "def update_lat_lon(df, iata_coords, col_prefix, lat_col, lon_col):\n",
+    "    for iata, coords in iata_coords.items():\n",
+    "        mask = (df[col_prefix] == iata) & (df[lat_col].isnull())\n",
+    "        df.loc[mask, [lat_col, lon_col]] = coords\n",
+    "update_lat_lon(df, iata_coords, 'ORIGIN', 'o_latitude', 'o_longitude')\n",
+    "update_lat_lon(df, iata_coords, 'DEST', 'd_latitude', 'd_longitude')\n",
+    "\n",
+    "df.to_csv('Final_FLights_Cords.csv', index=False)\n",
+    "\n",
+    "print(df[['ORIGIN', 'o_latitude', 'o_longitude', 'DEST', 'd_latitude', 'd_longitude']])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "eaa08edf-13ce-4a2c-9ed3-1f89426f5e4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IATA codes with null latitude or longitude in ORIGIN or DEST columns:\n",
+      "Series([], dtype: object)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('Final_FLights_Cords.csv')\n",
+    "origin_nulls = df[df['o_latitude'].isnull() | df['o_longitude'].isnull()]['ORIGIN'].unique()\n",
+    "dest_nulls = df[df['d_latitude'].isnull() | df['d_longitude'].isnull()]['DEST'].unique()\n",
+    "null_iata_codes = pd.Series(list(set(origin_nulls) | set(dest_nulls)))\n",
+    "print(\"IATA codes with null latitude or longitude in ORIGIN or DEST columns:\")\n",
+    "print(null_iata_codes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb2df736-91c4-4f77-ba78-b317ebcd5796",
    "metadata": {},
    "outputs": [],
    "source": []
